<resources>
    <string name="app_name">Feed Me!!</string>

    <string name="score_textview">Score : 300</string>
    <string name="start">Tap to Start</string>
    <string name="up">Up button</string>
    <string name="down">Down button</string>


    <string name="black">Black</string>
    <string name="pink">pink</string>
    <string name="orange">orange</string>
    <string name="box">box</string>

    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again</string>
    <string name="game_name">Feed Me</string>
    <string name="start_button">start button</string>
    <string name="blackSec">second black</string>
    <string name="image"> image </string>
    <string name="scoretext">  </string>




    <string name="pink_point">20 Points</string>
    <string name="orange_point">10 Points</string>
    <string name="start_game">Start</string>






</resources>
