<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/scoreLable"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/score_textview"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/startLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:text="@string/start"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/boxImgView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/box"
            android:src="@drawable/box" />

        <ImageView
            android:id="@+id/orangeImgView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/orange"
            android:src="@drawable/orange" />

        <ImageView
            android:id="@+id/pinkImgView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/pink"
            android:src="@drawable/pink" />

        <ImageView
            android:id="@+id/blackImgView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/black"
            android:src="@drawable/black" />

        <ImageView
            android:id="@+id/blackSecImgView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/blackSec"
            android:src="@drawable/black_sec" />

    </FrameLayout>






</LinearLayout>