<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">


    <TextView
        android:id="@+id/gameOverTv"
        android:layout_marginTop="100dp"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/game_over" />

    <TextView
        android:id="@+id/scoreTv"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:text="@string/scoretext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/highScoreTv"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="17sp"
        android:text="@string/scoretext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/try_Again"
        android:onClick="tryAgain"
        android:layout_width="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/try_again" />


</LinearLayout>